--- a/src/component/Task/task.scss
+++ b/src/component/Task/task.scss
@@ -11,48 +11,48 @@
         margin-left: 0.2rem;
     }
     &__button{
-        width:50%; 
-        height:100%;
-        margin: 0rem 0.4rem;
-        padding: 0.3rem 0.5rem;
-        border: none;
-        background-color: orange;
-        font-weight: bold;
-        border-radius: 50%;
+        // width:50%; 
+        // height:100%;
+        // margin: 0rem 0.4rem;
+        // padding: 0.3rem 0.5rem;
+        // border: none;
+        // background-color: orange;
+        // font-weight: bold;
+        // border-radius: 50%;
         &:hover{
-            background-color: white;
-            color: orange;
-            cursor: pointer;
+            // background-color: white;
+            // color: orange;
+            // cursor: pointer;
         }
         &__modify{
-            width:50%; 
-            height:100%;
-            border: none;
-            border-radius: 50%;
+            // width:50%; 
+            // height:100%;
+            // border: none;
+            // border-radius: 50%;
             &:hover{
-                background-color: yellow;
-                cursor: pointer;
+                // background-color: yellow;
+                // cursor: pointer;
             }
         }
         &__check{
-            width:50%; 
-            height:100%;
-            margin-top: 0.2rem;
-            border: none;
-            border-radius: 50%;
+            // width:50%; 
+            // height:100%;
+            // margin-top: 0.2rem;
+            // border: none;
+            // border-radius: 50%;
             &:hover{
-                background-color:green;
-                cursor: pointer;
+                // background-color:green;
+                // cursor: pointer;
             }
         }
         &__delete{
-            width:50%; 
-            height:100%;
-            border: none;
-            border-radius: 50%;
+            // width:50%; 
+            // height:100%;
+            // border: none;
+            // border-radius: 50%;
             &:hover{
-                background-color:red;
-                cursor: pointer;
+                // background-color:red;
+                // cursor: pointer;
             }
         }
   
