--- a/src/component/Form/form.scss
+++ b/src/component/Form/form.scss
@@ -3,6 +3,11 @@
     margin-left: 5rem;
 
 }
+@media screen and(max-width:768px) {
+    .form__container{
+    margin-left: 0.4rem;
+    }
+}
 .form {
     &__input{
         padding: 0.6rem 1rem;
@@ -25,5 +30,15 @@
         color:orange;
         margin-left: 0.5rem;
         margin-top: 0.5rem;
+    }
+}
+@media screen and(max-width:768px) {
+    .form {
+        &__input{
+            padding: 0.3rem 0.6rem;
+        }
+        &__button{
+            padding: 0.3rem 0.6rem;
+        }
     }
 }
