--- a/src/component/Task/task.scss
+++ b/src/component/Task/task.scss
@@ -11,48 +11,58 @@
         margin-left: 0.2rem;
     }
     &__button{
-        // width:50%; 
-        // height:100%;
-        // margin: 0rem 0.4rem;
-        // padding: 0.3rem 0.5rem;
-        // border: none;
-        // background-color: orange;
-        // font-weight: bold;
-        // border-radius: 50%;
+        background: none;
+        color: inherit;
+        border: none;
+        padding: 0;
+        font: inherit;
+        cursor: pointer;
+        outline: inherit;
         &:hover{
             // background-color: white;
             // color: orange;
             // cursor: pointer;
         }
         &__modify{
-            // width:50%; 
-            // height:100%;
-            // border: none;
-            // border-radius: 50%;
+            background: none;
+            color: inherit;
+            border: none;
+            padding: 0;
+            font: inherit;
+            cursor: pointer;
+            outline: inherit;
+            color:orange;
             &:hover{
-                // background-color: yellow;
-                // cursor: pointer;
+                transform: scale(1.2);
+                cursor: pointer;
             }
         }
         &__check{
-            // width:50%; 
-            // height:100%;
-            // margin-top: 0.2rem;
-            // border: none;
-            // border-radius: 50%;
+            background: none;
+            color: inherit;
+            border: none;
+            padding: 0;
+            font: inherit;
+            cursor: pointer;
+            outline: inherit;
+            color: green;
             &:hover{
-                // background-color:green;
-                // cursor: pointer;
+              transform: scale(1.2);
+              cursor: pointer;
             }
         }
         &__delete{
-            // width:50%; 
-            // height:100%;
-            // border: none;
-            // border-radius: 50%;
+            background: none;
+            color: inherit;
+            border: none;
+            padding: 0;
+            font: inherit;
+            cursor: pointer;
+            outline: inherit;
+            color:red;
             &:hover{
-                // background-color:red;
-                // cursor: pointer;
+                transform: scale(1.2);
+                cursor: pointer;
             }
         }
   
@@ -78,11 +88,7 @@
     margin: 0.2rem 0.8rem;
     letter-spacing: 0.1rem;
 }
-@media (max-width: 1450px) {
-.task__button {
-    margin: 0.0rem 0.1rem;
-}
-}
+
 @media (max-width: 1260px) { 
     .task{
         height: 40% ;
