--- a/src/component/App/App.scss
+++ b/src/component/App/App.scss
@@ -1,12 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+body{
+    overflow-x: visible;
+    overflow-y: hidden;
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+        background-color: #111;
+      }
+      ::-webkit-scrollbar-thumb {
+        background-clip: padding-box;
+        background-color: #000000;
+        border-radius: 9px;
+        border: 3px solid transparent;
+        box-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+      }
+}
 .container{
-  
-    max-width: 100vw;
-    height: 100vh;
-    overflow: hidden;
     font-family: 'Caveat', cursive;
     background-color: #3b73ed;
+    position: relative;
 }
+@media screen and (max-width: 1150px){
+    .container{
+        min-width: 180%;
+    };
+};
+@media screen and (max-width: 768px){
+    .container{
+        min-width: 350%;
+    };
+};
 main {
     display: flex;
     align-items: center;
@@ -14,21 +36,15 @@ main {
 }
 .todo__container{
     margin-top:1rem;
-    width: 96%;
+    width: 100%;
     height: 34rem;
     display: flex;
     padding: 1rem;
-    // overflow: hidden;
-    overflow-x: auto;
+    overflow-x: visible;
+    overflow-y: hidden;
 
 }
-@media screen and (max-width: 1000px){
-    .todo__container{
-        width:2000px;
 
-    
-    };
-};
 .todo::-webkit-scrollbar {
     width: 9px;
   }
