--- a/src/component/Column/column.scss
+++ b/src/component/Column/column.scss
@@ -2,14 +2,22 @@
     padding: 0.4rem;
     color: orange;
     width: 30rem;
-    min-height: 100%;
+
+    max-height: 100%;
     border-left: 1px solid white; 
     padding: 1rem;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: visible;
     &:last-child{
         border-right: 1px solid white;
     }
- }
+}
+@media screen and(max-width: 1150px){
+    .column{
+        width:30%;
+        
+    }
+}
 .todo__title{
     height: 2rem;
     display: flex;
@@ -24,10 +32,10 @@
     border-radius: 2rem;
     padding: 0.5rem;
 }
-@media (max-width: 680px){
+@media screen and (max-width: 680px){
 .todo__title{
     text-align: none;
     color: orange;
     font-size: 0.7rem;
- }
+    }
 }
