--- a/src/component/Task/task.scss
+++ b/src/component/Task/task.scss
@@ -1,4 +1,6 @@
 .task{
+    width: 95%;
+    min-height: 1.5rem;
     color: white;
     background-color: #152039;
     border-radius: 2rem;
@@ -6,23 +8,14 @@
     padding: 0.6rem;
     font-size: 1rem;
     display: flex;
+    justify-content: space-between;
+    &__formSubmit{
+        position:relative;
+    }
     &__modifyInput{
-        width: 90%;
-        margin-left: 0.2rem;
+        width: 100%;
     }
     &__button{
-        background: none;
-        color: inherit;
-        border: none;
-        padding: 0;
-        font: inherit;
-        cursor: pointer;
-        outline: inherit;
-        &:hover{
-            // background-color: white;
-            // color: orange;
-            // cursor: pointer;
-        }
         &__modify{
             background: none;
             color: inherit;
@@ -33,11 +26,14 @@
             outline: inherit;
             color:orange;
             &:hover{
-                transform: scale(1.2);
+                transform: scale(1.4);
                 cursor: pointer;
             }
         }
         &__check{
+            position:absolute;
+            top: 5px;
+            right: 5px;
             background: none;
             color: inherit;
             border: none;
@@ -47,8 +43,8 @@
             outline: inherit;
             color: green;
             &:hover{
-              transform: scale(1.2);
-              cursor: pointer;
+            transform: scale(1.4);
+            cursor: pointer;
             }
         }
         &__delete{
@@ -61,11 +57,11 @@
             outline: inherit;
             color:red;
             &:hover{
-                transform: scale(1.2);
+                transform: scale(1.4);
                 cursor: pointer;
             }
         }
-  
+
     }
     &__text {
         width: 90%;
@@ -91,12 +87,6 @@
 
 @media (max-width: 1260px) { 
     .task{
-        height: 40% ;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-between;
-        margin-bottom: 0.6rem;
         &__button {
             &__text{
                 font-size: 0.9rem;
@@ -117,9 +107,3 @@
     }
     
     }
-@media (max-width: 560px) { 
-.task__text{
-    font-size: 0.9rem;
-}
-
-}
