--- a/src/component/App/App.scss
+++ b/src/component/App/App.scss
@@ -2,33 +2,25 @@
 body{
     overflow-x: visible;
     overflow-y: hidden;
-    ::-webkit-scrollbar {
-        -webkit-appearance: none;
-        background-color: #111;
-      }
-      ::-webkit-scrollbar-thumb {
-        background-clip: padding-box;
-        background-color: #000000;
-        border-radius: 9px;
-        border: 3px solid transparent;
-        box-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
-      }
+    // ::-webkit-scrollbar {
+    //     -webkit-appearance: none;
+    //     background-color: #111;
+    //   }
+    //   ::-webkit-scrollbar-thumb {
+    //     background-clip: padding-box;
+    //     background-color: #000000;
+    //     border-radius: 9px;
+    //     border: 3px solid transparent;
+    //     box-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+    //   }
 }
 .container{
+    min-height: 100vh;
     font-family: 'Caveat', cursive;
     background-color: #3b73ed;
     position: relative;
 }
-@media screen and (max-width: 1150px){
-    .container{
-        min-width: 180%;
-    };
-};
-@media screen and (max-width: 768px){
-    .container{
-        min-width: 350%;
-    };
-};
+
 main {
     display: flex;
     align-items: center;
@@ -42,7 +34,6 @@ main {
     padding: 1rem;
     overflow-x: visible;
     overflow-y: hidden;
-
 }
 
 .todo::-webkit-scrollbar {
