--- a/src/component/Task/task.scss
+++ b/src/component/Task/task.scss
@@ -32,8 +32,8 @@
         }
         &__check{
             position:absolute;
-            top: 5px;
-            right: 5px;
+            top: 0.2rem;
+            right: -3rem;
             background: none;
             color: inherit;
             border: none;
@@ -83,6 +83,17 @@
     width: 70%;
     margin: 0.2rem 0.8rem;
     letter-spacing: 0.1rem;
+}
+
+.description{
+    background: none;
+    border: none;
+    color:white;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+
 }
 
 @media (max-width: 1260px) { 
